--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,13 @@
 # Exclude non-essential files from dist
 
-resources/puml export-ignore
-docs export-ignore
+# Dirs
+resources/puml  export-ignore
+docs            export-ignore
 
-.gitattributes export-ignore
-.gitignore export-ignore
-build.properties.ini.dist export-ignore
-build.xml export-ignore
-CHANGELOG.md export-ignore
-CONTRIBUTING.md export-ignore
-LICENSE export-ignore
-README.md export-ignore
+# Files
+.gitattributes  export-ignore
+.gitignore      export-ignore
+*.xml           export-ignore
+*.dist          export-ignore
+*.md            export-ignore
+LICENSE         export-ignore
