--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,5 +3,15 @@ image: 'php:7.2'
 plantuml:auto-update:
   only:
   - schedules
+  before_script:
+  # https://gitlab.com/gitlab-org/gitlab-ce/issues/18106#note_88176162
+  - url_host=`git remote get-url origin | sed -e "s/https:\/\/gitlab-ci-token:.*@//g"`
+  - git reset --hard
+  - git clean -fd
+  - git checkout $CI_COMMIT_REF_NAME
+  - git pull origin $CI_COMMIT_REF_NAME
+  - git remote set-url origin "https://$GIT_ACCESS_USER:$GIT_ACCESS_PASSWORD@${url_host}"
+  - git config user.name $GIT_ACCESS_USER
+  - git config user.email $GIT_ACCESS_EMAIL
   script:
   - php -v
