--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ auto-update:
   - git checkout $CI_COMMIT_REF_NAME
   - git pull origin $CI_COMMIT_REF_NAME
   - git remote set-url origin "https://$GIT_ACCESS_USER:$GIT_ACCESS_PASSWORD@${url_host}"
-  - git config user.name $GIT_ACCESS_USER
-  - git config user.email $GIT_ACCESS_EMAIL
+  - git config user.name jawira
+  - git config user.email dev@tugal.be
   script:
   - php -v
