--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   app:
-    image: registry.gitlab.com/jawira/plantuml
+    image: ${CI_REGISTRY_IMAGE}
     build:
       context: .
       dockerfile: Dockerfile
