--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,15 +24,6 @@ auto-update:
   image: registry.gitlab.com/jawira/plantuml
   only:
   - schedules
-  before_script:
-  # https://gitlab.com/gitlab-org/gitlab-ce/issues/18106#note_88176162
-  - url_host=`git remote get-url origin | sed -e "s/https:\/\/gitlab-ci-token:.*@//g"`
-  - git reset --hard
-  - git clean -fd
-  - git checkout $CI_COMMIT_REF_NAME
-  - git pull origin $CI_COMMIT_REF_NAME
-  - git remote set-url origin "https://$GIT_ACCESS_USER:$GIT_ACCESS_PASSWORD@${url_host}"
-  - git config user.name jawira
-  - git config user.email dev@tugal.be
   script:
-  - php -v
+  - phing auto-update:clone -DGIT_ACCESS_TOKEN=${GIT_ACCESS_TOKEN}
+  - ll -l resources/auto-update/
