--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,4 +26,4 @@ auto-update:
   - schedules
   script:
   - phing auto-update:clone -DGIT_ACCESS_TOKEN=${GIT_ACCESS_TOKEN}
-  - ll -l resources/auto-update/
+  - ls -l resources/auto-update/
