--- a/build.xml
+++ b/build.xml
@@ -35,17 +35,17 @@
         <reflexive file="./README.md">
             <filterchain>
                 <replaceregexp>
-                    <regexp pattern="&lt;!--version:start--&gt;[[:space:][:alnum:][:punct:]]*&lt;!--version:end--&gt;"
+                    <regexp pattern="&lt;!--version:start--&gt;.*&lt;!--version:end--&gt;"
                             replace="&lt;!--version:start--&gt;${line.separator}${plantuml.version}${line.separator}&lt;!--version:end--&gt;"
-                            modifiers="U"/>
+                            modifiers="Us"/>
 
-                    <regexp pattern="&lt;!--md5:start--&gt;[[:space:][:alnum:][:punct:]]*&lt;!--md5:end--&gt;"
+                    <regexp pattern="&lt;!--md5:start--&gt;.*&lt;!--md5:end--&gt;"
                             replace="&lt;!--md5:start--&gt;${checksum.md5}&lt;!--md5:end--&gt;"
-                            modifiers="U"/>
+                            modifiers="Us"/>
 
-                    <regexp pattern="&lt;!--sha1:start--&gt;[[:space:][:alnum:][:punct:]]*&lt;!--sha1:end--&gt;"
+                    <regexp pattern="&lt;!--sha1:start--&gt;.*&lt;!--sha1:end--&gt;"
                             replace="&lt;!--sha1:start--&gt;${checksum.sha1}&lt;!--sha1:end--&gt;"
-                            modifiers="U"/>
+                            modifiers="Us"/>
                 </replaceregexp>
             </filterchain>
         </reflexive>
