--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,11 @@
 # Exclude non-essential files from dist
 
-# Dirs
 resources/puml  export-ignore
 docs            export-ignore
-
-# Files
 .gitattributes  export-ignore
 .gitignore      export-ignore
 *.xml           export-ignore
 *.dist          export-ignore
-*.md            export-ignore
-LICENSE         export-ignore
+*.json          export-ignore
+CHANGELOG.md
+CONTRIBUTING.md
