--- a/build.xml
+++ b/build.xml
@@ -141,4 +141,25 @@
         <delete file="build.version"/>
         <version startingVersion="${describe.output}" releasetype="Minor" property="build.version"/>
     </target>
+
+    <target name="git:list-tags" description="List all git tags">
+        <!--https://stackoverflow.com/a/34239190/4345061-->
+        <exec executable="git" passthru="true">
+            <arg value="log"/>
+            <arg line="--graph --all --decorate --oneline --simplify-by-decoration"/>
+        </exec>
+    </target>
+
+    <target name="phing:visualize" description="Update build.png">
+        <composer command="require">
+            <arg value="jawira/phing-visualizer"/>
+        </composer>
+        <exec executable="vendor/bin/phing-visualizer">
+            <arg value="--output"/>
+            <arg path="./docs/"/>
+        </exec>
+        <composer command="remove">
+            <arg value="jawira/phing-visualizer"/>
+        </composer>
+    </target>
 </project>
