--- a/build.xml
+++ b/build.xml
@@ -5,12 +5,11 @@
     <runtarget target="init"/>
 
     <!--TARGETS-->
-    <target name="init" hidden="true">
+    <target name="init">
         <resolvepath propertyName="dir.output" path="./resources/output/"/>
         <resolvepath propertyName="dir.input" path="./resources/puml/"/>
         <resolvepath propertyName="dir.tmp" path="./resources/tmp/"/>
         <property name="file.version" value="./resources/readme/plantuml.version.txt"/>
-        <exec executable="vendor/bin/phing-visualizer"/>
     </target>
 
     <target name="update"
@@ -140,5 +139,17 @@
         <php expression="trim(trim('${describe.output}', 'v'));" returnProperty="describe.output"/>
         <delete file="build.version"/>
         <version startingVersion="${describe.output}" releasetype="Minor" property="build.version"/>
+    </target>
+
+    <target name="changelog:links" description="Update links in composer.json">
+        <composer command="require">
+            <arg value="symplify/changelog-linker"/>
+        </composer>
+        <exec executable="vendor/bin/changelog-linker">
+            <arg value="link"/>
+        </exec>
+        <composer command="remove">
+            <arg value="symplify/changelog-linker"/>
+        </composer>
     </target>
 </project>
